Port to Forge 1.19.2