@@ -1,101 +1,61 @@
+buildscript {
+    repositories {
+        maven {
+            name = "SpongePowered"
+            url = uri("https://repo.spongepowered.org/maven/")
+        }
+
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath("org.spongepowered:mixingradle:0.7-SNAPSHOT")
+    }
+}
+
 plugins {
-    id("fabric-loom") version "1.0-SNAPSHOT"
+    id("net.minecraftforge.gradle") version "5.1.+"
     id("com.matthewprenger.cursegradle") version "1.4.0"
     id("com.diffplug.spotless") version "6.10.0"
 }
 
+apply(plugin: "net.minecraftforge.gradle")
+apply(plugin: "org.spongepowered.mixin")
+
 group = "me.ramidzkh"
-version = System.getenv("APPBOT_VERSION") ?: "0.0.0"
+version = (System.getenv("APPBOT_VERSION") ?: "0.0.0").replace("forge/", "")
 
 repositories {
-    exclusiveContent {
-        forRepository {
-            maven {
-                name = "Modmaven"
-                url = uri("https://modmaven.dev/")
-            }
-        }
+    maven {
+        name = "Modmaven"
+        url = uri("https://modmaven.dev/")
 
-        filter {
+        content {
             includeGroup("appeng")
             includeGroup("vazkii.botania")
             includeGroup("vazkii.patchouli")
         }
     }
 
-    exclusiveContent {
-        forRepository {
-            maven {
-                name = "Ladysnake Libs"
-                url = uri("https://ladysnake.jfrog.io/artifactory/mods/")
-            }
-        }
+    maven {
+        name = "theillusivec4"
+        url = uri("https://maven.theillusivec4.top/")
 
-        filter {
-            includeGroup("dev.onyxstudios.cardinal-components-api")
-        }
-    }
-
-    exclusiveContent {
-        forRepository {
-            maven {
-                name = "TerraformersMC"
-                url = uri("https://maven.terraformersmc.com/")
-            }
-        }
-
-        filter {
-            includeGroup("dev.emi")
-        }
-    }
-
-    exclusiveContent {
-        forRepository {
-            maven {
-                name = "JamiesWhiteShirt"
-                url = uri("https://maven.jamieswhiteshirt.com/libs-release/")
-            }
-        }
-
-        filter {
-            includeGroup("com.jamieswhiteshirt")
-        }
-    }
-
-    exclusiveContent {
-        forRepository {
-            maven {
-                name = "Jitpack"
-                url = uri("https://jitpack.io/")
-            }
-        }
-
-        filter {
-            includeGroup("com.github.emilyploszaj")
-        }
-    }
-
-    exclusiveContent {
-        forRepository {
-            maven {
-                name = "Modrinth"
-                url = uri("https://api.modrinth.com/maven")
-            }
-        }
-
-        filter {
-            includeGroup("maven.modrinth")
+        content {
+            includeGroup("top.theillusivec4.curios")
         }
     }
 }
 
 dependencies {
-    minecraft("net.minecraft:minecraft:${minecraft_version}")
-    mappings(loom.officialMojangMappings())
-    modImplementation("net.fabricmc:fabric-loader:${loader_version}")
+    minecraft("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
+    annotationProcessor("org.spongepowered:mixin:0.8.5:processor")
 
-    modImplementation("appeng:appliedenergistics2-fabric:${ae2_version}")
-    modImplementation("vazkii.botania:Botania:${minecraft_version}-${botania_version}")
+    implementation(fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}"))
+    implementation(fg.deobf("vazkii.botania:Botania:${minecraft_version}-${botania_version}"))
+
+    runtimeOnly(fg.deobf("vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}"))
+    runtimeOnly(fg.deobf("top.theillusivec4.curios:curios-forge:${minecraft_version}-${curios_version}"))
 }
 
 sourceSets {
@@ -112,22 +72,6 @@ java {
     }
 }
 
-loom {
-    runs {
-        create("data") {
-            client()
-
-            configName = "Data Generation"
-            runDir = "build/data"
-
-            vmArg("-Dfabric-api.datagen")
-            vmArg("-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}")
-            vmArg("-Dfabric-api.datagen.strict-validation")
-            vmArg("-Dfabric-api.datagen.modid=appbot")
-        }
-    }
-}
-
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
@@ -139,9 +83,80 @@ processResources {
     from("LICENSE")
     exclude(".cache")
 
-    filesMatching("fabric.mod.json") {
+    filesMatching("META-INF/mods.toml") {
         expand("version": project.version)
     }
+}
+
+jar {
+    finalizedBy("reobfJar")
+
+    from(sourceSets.main.output.classesDirs)
+    from(sourceSets.main.output.resourcesDir)
+
+    manifest {
+        attributes([
+                "Specification-Title"     : "Applied Botanics",
+                "Specification-Vendor"    : "ramidzkh",
+                "Specification-Version"   : "${project.version}",
+                "Implementation-Title"    : "${project.name}",
+                "Implementation-Version"  : "${project.version}",
+                "Implementation-Vendor"   : "ramidzkh",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs"            : "appbot.mixins.json"
+        ])
+    }
+}
+
+////////////////////
+// Forge/Minecraft
+minecraft {
+    mappings(channel: "official", version: "${minecraft_version}")
+
+    /**
+     * Configures properties common to all run configurations
+     */
+    def commonRunProperties = {
+        workingDirectory(project.file("run"))
+
+        property("forge.logging.console.level", "debug")
+        property("fml.earlyprogresswindow", "false")
+        jvmArgs("--add-opens", "java.base/sun.security.util=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.base/java.util.jar=ALL-UNNAMED")
+
+        // See https://github.com/Vazkii/Patchouli#mixin-troubleshooting
+        property("mixin.env.remapRefMap", "true")
+        property("mixin.env.refMapRemappingFile", "${projectDir}/build/createSrgToMcp/output.srg")
+
+        mods {
+            appbot {
+                source(sourceSets.main)
+            }
+        }
+    }
+
+    runs {
+        client {
+            with(commonRunProperties)
+        }
+
+        server {
+            with(commonRunProperties)
+        }
+
+        data {
+            with(commonRunProperties)
+            // ForgeGradle will just force-exit the Gradle Daemon which fails our builds in case
+            // a daemon is used for any reason.
+            forceExit false
+            args("--mod", "appbot", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources"))
+        }
+    }
+}
+
+mixin {
+    add(sourceSets.main, "appbot.mixins.refmap.json")
+    config("appbot.mixins.json")
 }
 
 /////////////
@@ -184,14 +199,14 @@ System.getenv("CURSEFORGE")?.with { String key ->
             }
 
             addGameVersion("${minecraft_version}")
-            addGameVersion("Fabric")
+            addGameVersion("Forge")
 
-            mainArtifact(remapJar) {
-                displayName = "${project.version} [FABRIC]"
+            mainArtifact(jar) {
+                displayName = "${project.version} [FORGE]"
 
                 relations {
                     requiredDependency("applied-energistics-2")
-                    requiredDependency("botania-fabric")
+                    requiredDependency("botania")
                 }
             }
         }
